// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a free 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": 75,
      "justifyContent": "center",
      "padding": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "color": "#C0C0C0",
          },
        ]
      }
    >
      Free
    </Text>
    <Text
      style={
        Object {
          "color": "#808080",
        }
      }
    >
      7:30
       - 
      8:30 AM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignContent": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  />
</View>
`;

exports[`Tests different variations of classes Renders BlockComponent with a dr 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": 75,
      "justifyContent": "center",
      "padding": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "color": "green",
          },
        ]
      }
    >
      Directed Reaserch
    </Text>
    <Text
      style={
        Object {
          "color": "#808080",
        }
      }
    >
      12:14
       - 
      1:24 PM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignContent": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Dr. Test
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Room 102
    </Text>
  </View>
</View>
`;

exports[`Tests different variations of classes Renders BlockComponent with a major 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": 75,
      "justifyContent": "center",
      "padding": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      Test Major
    </Text>
    <Text
      style={
        Object {
          "color": "#808080",
        }
      }
    >
      7:30
       - 
      8:30 AM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignContent": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Mr. Test
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Fitness center
    </Text>
  </View>
</View>
`;

exports[`Tests different variations of classes Renders BlockComponent with a minor 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "height": 75,
      "justifyContent": "center",
      "padding": 10,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#444444",
            "fontSize": 25,
            "fontWeight": "bold",
          },
          Object {
            "color": "gold",
          },
        ]
      }
    >
      Test minor
    </Text>
    <Text
      style={
        Object {
          "color": "#808080",
        }
      }
    >
      12:14
       - 
      1:24 PM
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignContent": "stretch",
          "flexDirection": "row",
          "flexWrap": "nowrap",
          "justifyContent": "space-between",
        },
        Object {
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "left",
          },
        ]
      }
    >
      Mrs. Test
    </Text>
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "#808080",
          },
          Object {
            "flex": 1,
            "textAlign": "right",
          },
        ]
      }
    >
      Room 334
    </Text>
  </View>
</View>
`;
